--- a/JS_Practice.html
+++ b/JS_Practice.html
@@ -23,11 +23,13 @@
 function changeText() {
   document.getElementById("demo").innerHTML = "Hello World!";
 }
-</script>
-<script>
+
 function alertBox() {
   alert("Hello World!");
 }
+</script>
+<script>
+  alert("Hello World");
 </script>
 
 </body>
