--- a/JS_Practice.html
+++ b/JS_Practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello World</title>
+  <title>Hello World!</title>
   <style>
     body {
       background-color: lightgrey;
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<h2>JavaScript øvelse.</h2>
+<h2>JavaScript practice.</h2>
 <p title="Hello World", id="demo">We can change this text to say: "Hello World!",
-<br>or you can hover over to se a tooltip.</p>
+<br>hover over to se a tooltip, or press the "Alert me" button.</p>
 
 <button type="button" onclick="changeText()">Change Text</button>
 <button type="button" onclick="alertBox()">Alert me</button>
